--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "workspaces":["Client","Server"],
+  "workspaces": [
+    "Client",
+    "Server"
+  ],
   "type": "module",
   "directories": {
     "lib": "lib"
@@ -15,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3"
   }
