--- a/Server/package.json
+++ b/Server/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "workspaces": [
-    "Client",
-    "Server"
-  ],
   "type": "module",
   "directories": {
     "lib": "lib"
@@ -21,5 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
