--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "workspaces":["Client","Server"],
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.6.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.51.0"
   }
 }
